Stylesheet/emote/tag updates 2014-10-22

--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -341,7 +341,7 @@ a[href|="/examplecode2"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
-a[href|="/shykisscock"]
+a[href|="/shykisscock"], a[href|="/seductivecadance"], a[href|="/princesshug"], a[href|="/spreadingcadance"]
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -353,7 +353,7 @@ a[href|="/dirtypinkie"]
 {background-image:url(%%b200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
-a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"]
+a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"], a[href|="/cadgym"], a[href|="/wetcora"]
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
@@ -365,15 +365,19 @@ a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[hr
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/festivebuttplug"], a[href|="/lickusclean"]
+a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/wetqueen"], a[href|="/tootight"]
+a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"]
 {background-position: -200% 0%;}
 
+/* Grid pos 3,0 'motes */
+a[href|="/cadgym"]
+{background-position: -300% 0%;}
+
 /* Grid pos 0,1 'motes */
-a[href|="/doublemoon"]
+a[href|="/doublemoon"], a[href|="/wetcora"], a[href|="/spreadingcadance"]
 {background-position: 0% -100%;}
 
 /* Grid pos 1,1 'motes */
@@ -416,6 +420,14 @@ a[href|="/nmmbj"], a[href|="/nmmbent"], a[href|="/applesocks"], a[href|="/sunand
 a[href|="/smugass"], a[href|="/cellyshy"], a[href|="/mistletoe"], a[href|="/piledriver"], a[href|="/sisterlylove"], a[href|="/twisockspresenting"], a[href|="/chinesenewyear"], a[href|="/bringingsexyrap"], a[href|="/rainbowmaid"]
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
+/* Misfits d */
+a[href|="/eevndrink"], a[href|="/spitbutt"], a[href|="/spitdom"], a[href|="/tavipanties"], a[href|="/lovebutt"], a[href|="/doalittleshake"], a[href|="/whosaysyouhaveachoice"]
+{background-image:url(%%misfitsd%%);display:block;float:left;}
+
+/* Misfits e */
+a[href|="/stripeass"], a[href|="/zecoraoops"], a[href|="/zecoraanal"], a[href|="/burchy"], a[href|="/sexyzecoramaid"]
+{background-image:url(%%misfitse%%);display:block;float:left;}
+
 
 /* Animated Emotes */
 a[href|="/twichug"], a[href|="/chugchugchug"] {background: url(%%chugchugchug%%) no-repeat;width:150px;height:116px;display:block;float:left;}
@@ -447,3 +459,16 @@ a[href|="/twisockspresenting"] {width: 200px;height:98px;background-position: -2
 a[href|="/rainbowmaid"] {width: 190px;height:200px;background-position: -171px -450px;}
 a[href|="/bringingsexyrap"] {width: 167px;height:250px;background-position: -214px -650px;}
 a[href|="/chinesenewyear"] {width: 160px;height:200px;background-position: -235px -242px;}
+a[href|="/eevndrink"] {width: 200px;height:166px;background-position: 0px 0px;}
+a[href|="/spitbutt"] {width: 200px;height:171px;background-position: 0px -166px;}
+a[href|="/spitdom"] {width: 184px;height:200px;background-position: 0px -337px;}
+a[href|="/tavipanties"] {width: 139px;height:150px;background-position: -200px 0px;}
+a[href|="/lovebutt"] {width: 150px;height:200px;background-position: -200px -150px;}
+a[href|="/doalittleshake"] {width: 200px;height:191px;background-position: -184px -350px;}
+a[href|="/whosaysyouhaveachoice"] {width: 133px;height:200px;background-position: -350px 0px;}
+a[href|="/stripeass"] {width: 250px;height:198px;background-position: 0px 0px;}
+a[href|="/zecoraoops"] {width: 198px;height:200px;background-position: 0px -198px;}
+a[href|="/zecoraanal"] {width: 198px;height:200px;background-position: 0px -398px;}
+a[href|="/burchy"] {width: 200px;height:150px;background-position: -250px 0px;}
+a[href|="/sexyzecoramaid"] {width: 135px;height:150px;background-position: -348px -150px;}
+a[href|="/"] {width: 133px;height:200px;background-position: -350px 0px;}
