--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -249,14 +249,14 @@ a[href|="/flutterboo"] {
  
 /* NEW EMOTES LESGOOOOOO */
 
-a[href|="/sleepytwi"], a[href|="/twinap"], a[href|="/twibutt"], a[href|="/twishyhi"], a[href|="/twishy4"], a[href|="/mei4"], a[href|="/bashfultwilight"], a[href|="/twiwah"], a[href|="/coylight"], a[href|="/twifuzzy"], a[href|="/pretzeltwi"], a[href|="/whome"], a[href|="/whyamisosquisheh"], a[href|="/facewing"], a[href|="/no"], a[href|="/happyflutterbat"], a[href|="/itstheperfectplan"], a[href|="/twiohyou"], a[href|="/teeheelight"],
+a[href|="/sleepytwi"], a[href|="/twinap"], a[href|="/twicloud"], a[href|="/twishyhi"], a[href|="/twishy4"], a[href|="/mei4"], a[href|="/bashfultwilight"], a[href|="/twiwah"], a[href|="/coylight"], a[href|="/twifuzzy"], a[href|="/pretzeltwi"], a[href|="/whome"], a[href|="/whyamisosquisheh"], a[href|="/facewing"], a[href|="/no"], a[href|="/happyflutterbat"], a[href|="/itstheperfectplan"], a[href|="/twiohyou"], a[href|="/teeheelight"],
 a[href|="/fuzzytwi"], a[href|="/twisocks"], a[href|="/pretzellove"], a[href|="/twime"], a[href|="/whyamisosquishy"], 
 a[href|="/twiugh"], a[href|="/happybat"], a[href|="/twihano"], a[href|="/twiveryyes"], a[href|="/twishh"], 
 a[href|="/twiheehee"]
 { display: inline-block; background: url(%%Supersheet%%) no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
  
 a[href|="/sleepytwi"], a[href|="/twinap"] { background-position: -1px -0px; width: 211px; height: 150px; }
-a[href|="/twibutt"] { background-position: -1px -151px; width: 200px; height: 154px; }
+a[href|="/twicloud"] { background-position: -1px -151px; width: 200px; height: 154px; }
 a[href|="/twishyhi"], a[href|="/twishy4"], a[href|="/mei4"] { background-position: -1px -306px; width: 200px; height: 184px; }
 a[href|="/bashfultwilight"], a[href|="/coylight"] { background-position: -1px -491px; width: 183px; height: 125px; }
 a[href|="/twiwah"] { background-position: -1px -617px; width: 164px; height: 150px; }
