--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -8,7 +8,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%patpatpatbanner%%) 50% 0px !important;
+   background: url(%%joker%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -595,7 +595,7 @@ a.author[href$="V17Ds"],
 a.author[href$="Rudicorn"],
 a.author[href$="jimmpony"],
 a.author[href$="DiscordDraconequus"],
-a.author[href$="IncidentalUnicorn2"],
+a.author[href$="andysonic14"],
 a.author[href$="Juz16"],
 a.author[href$="EvanMacIan"],
 a.author[href$="kcirvam"],
@@ -722,7 +722,7 @@ a.author[href$="thezooman123"]:before,
 a.author[href$="Rudicorn"]:before,
 a.author[href$="jimmpony"]:before,
 a.author[href$="DiscordDraconequus"]:before,
-a.author[href$="IncidentalUnicorn2"]:before,
+a.author[href$="andysonic14"]:before,
 a.author[href$="Juz16"]:before,
 a.author[href$="EvanMacIan"]:before,
 a.author[href$="kcirvam"]:before,
@@ -924,7 +924,7 @@ a.author[href$=LlamaInDrag]:before { content:"A FKN DINOSAUR" }
 a.author[href$=Nagashizuri]:before { content:"Maga" }
 a.author[href$=andresonic1]:before { content:"Fake" }
 a.author[href$=Bflat13]:before { content:"MOTHER FUCKING SUGAR!" }
-a.author[href$=IncidentalUnicorn2]:before { content:"The Cringler" }
+a.author[href$=andysonic14]:before { content:"The Cringler" }
 a.author[href$=FUCKING_HATE_REDDIT]:before { content:"Freakin' Dislike Webplace" }
 a.author[href$=andysonic3]:before { content:"Chibi Sailor Andy" }
 a.author[href$=andysonic0]:before { content:"Mini Andy" }
@@ -1029,7 +1029,7 @@ a.author[href$=herabek]:after,
 a.author[href$=Backupusername]:after,
 a.author[href$= Nagashizuri]:after,
 a.author[href$="Conky_"]:after,
-a.author[href$="IncidentalUnicorn2"]:after,
+a.author[href$="andysonic14"]:after,
 a.author[href$="andysonic3"]:after,
 a.author[href$="andysonic0"]:after,
 a.author[href$="Andysonic-1"]:after,
@@ -1116,7 +1116,7 @@ a.author[href$="10z20Luka"]:after { content:" (Wears, a flaming kilt made from t
 a.author[href$=JIVEprinting]:after { content:" Christfag" }
 a.author[href$="Conky_"]:after { content:" In a Lot of Trouble, Mr." }
 a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
-a.author[href$="IncidentalUnicorn2"]:after { content:" Making no fun, fun!" }
+a.author[href$="andysonic14"]:after { content:" the prodigal son returns."; color:goldenrod}
 a.author[href$="andysonic3"]:after { content:" THE NO FUN DEPUTY" }
 a.author[href$="andysonic0"]:after { content:" THE NO FUN CHIEF" }
 a.author[href$="Andysonic-1"]:after { content:" THE NO FUN ROOKIE" }
