--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -374,6 +374,14 @@ a[href|="/shodan"], a[href|="/i34"] {
         height: 190px;
         background-image: url(%%shodan%%)
         }
+a[href|="/doitfor24"], a[href|="/i40"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 677px;
+        height: 485px;
+        background-image: url(%%doitfor24%%)
+        }
     /**********************
     *
     *    OTHER EMOTE STUFF
