--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -675,7 +675,7 @@ display: none !important;
 border: none !important;
 top:20px;
 padding:0px;
-background: url(%%spritesheet%%);
+background: url(%%spritesheet10182014%%);
 display:inline-block;
 }
 
@@ -720,6 +720,7 @@ display:inline-block;
 .flair-surpriseflair{ background-position: -80px -880px; width: 30px; height: 30px; } 
 .flair-trixieflair{ background-position: -80px -960px; width: 30px; height: 30px; } 
 .flair-zecoraflair{ background-position: -80px -1040px; width: 30px; height: 30px; }
+.flair-nimbleflair{ background-position: -80px -1118px; width: 30px; height: 30px; }
 
 a[href="/jclop"] {
 background-position: 0px 0px;
