--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -508,7 +508,7 @@ a[href|="/thespittening"], a[href|="/goodkingsombra"], a[href|="/derpymouse"], a
 {background-image:url(%%misfitsi%%);display:block;float:left;}
 
 /* Misfits j */
-a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], a[href|="/fillyzecora"], a[href|="/openfire"], a[href|="/tavimafiaopenfire"], a[href|="/blamemysister"], a[href|="/youbetchya"], a[href|="/cadstare"], a[href|="/cadoops"], a[href|="/whyhellothere"], a[href|="/zecoradisapproves"], a[href|="/zecorabutt"], a[href|="/equestriagrills"], a[href|="/mallcop"], a[href|="/piesaurus"], a[href|="/karmacannon"], a[href|="/majesticsombra"], a[href|="/kingsomblaaaaa"], a[href|="/twisci"], a[href|="/eggplantsparkle"], a[href|="/sunsetlick"], a[href|="/sunsetagain"], a[href|="/sunsetbat"], a[href|="/sunsetbook"], a[href|="/nursetwi"], a[href|="/twinurse2"]
+a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], a[href|="/fillyzecora"], a[href|="/openfire"], a[href|="/tavimafiaopenfire"], a[href|="/blamemysister"], a[href|="/youbetchya"], a[href|="/cadstare"], a[href|="/cadoops"], a[href|="/whyhellothere"], a[href|="/zecoradisapproves"], a[href|="/zecorabutt"], a[href|="/equestriagrills"], a[href|="/mallcop"], a[href|="/piesaurus"], a[href|="/karmacannon"], a[href|="/majesticsombra"], a[href|="/kingsomblaaaaa"], a[href|="/twisci"], a[href|="/eggplantsparkle"], a[href|="/sunsetlick"], a[href|="/sunsetagain"], a[href|="/sunsetbat"], a[href|="/sunsetbook"], a[href|="/nursetwi"], a[href|="/twinurse2"], a[href|="/feelzies"]
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /*
@@ -1163,3 +1163,4 @@ a[href|="/sunsetagain"] {width:86px;height:100px;background-position: 0 -607px;}
 a[href|="/sunsetbat"] {width:168px;height:150px;background-position: -438px -478px;}
 a[href|="/sunsetbook"] {width:150px;height:115px;background-position: -86px -607px;}
 a[href|="/nursetwi"], a[href|="/twinurse2"] {width:74px;height:150px;background-position: -606px -450px;}
+a[href|="/feelzies"] {width:83px;height:100px;background-position: -628px -600px;}
